# arcgis-portal-mcp

./: .env.example  .gitignore  ESRI_MCP_COMPARISON.md  README.md  pyproject.toml  screenshot_webmap.py  test_live.py  test_mcp_protocol.py
arcgis_portal_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_basic.py
